# core

./: .gitmodules  CMakeLists.txt  README.md
scripts/: core.cmake
shaders/hlsl/core/: complex.hlsli
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/common/: CMakeLists.txt  bitmask.hpp  handle.hpp
src/core/core/: CMakeLists.txt
src/core/core/common/: CMakeLists.txt  bitmask.hpp  handle.hpp  stable_bucket_vector.hpp
src/core/core/d3d12/: .gitignore  CMakeLists.txt  agility.cpp.in  d3d12_descriptor_util.cpp  d3d12_descriptor_util.hpp  d3d12_device.cpp  d3d12_device.hpp  d3d12_pso.cpp  d3d12_pso.hpp  d3d12_shader.cpp  d3d12_shader.hpp
src/core/d3d12/: CMakeLists.txt  agility.cpp.in  d3d12_descriptor_util.cpp  d3d12_descriptor_util.hpp  d3d12_device.cpp  d3d12_device.hpp  d3d12_pso.cpp  d3d12_pso.hpp  d3d12_shader.cpp
src/core_sample_framework/: CMakeLists.txt  bindless_descriptor_allocator.cpp  bindless_descriptor_allocator.hpp  resource.cpp  resource.hpp  sample_base_app.cpp  sample_base_app.hpp  swapchain.cpp  swapchain.hpp  window.hpp  window_win32_default.cpp  window_win32_default.hpp
